--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -1,4 +1,4 @@
-.login-page {
+.register-page {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
 }
 
-.login-modal {
+.register-modal {
   padding: 32px;
   border-radius: 15px;
   border: 1px;
@@ -26,18 +26,10 @@
   margin-right: auto;
 }
 
-.login-form-forgot {
-  float: right;
-}
-
-.ant-col-rtl .login-form-forgot {
-  float: left;
-}
-
-.login-form-button {
+.register-form-button {
   width: 100%;
 }
 
-.login-form-register-now {
+.register-form-login-now {
   margin-top: 10px;
 }
