--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(bg.png);
+  background-image: url(../../assets/bg.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
