--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -1,6 +1,5 @@
 .register-page {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,18 +11,13 @@
 
 .register-modal {
   padding: 32px;
+  margin: 20px 0;
   border-radius: 15px;
   border: 1px;
   border-color: black;
   max-width: 90vw;
   width: 26rem;
   background-color: white;
-}
-
-.logo {
-  width: 250px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .register-form-button {
