--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -7,6 +7,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100vh;
 }
 
 .register-modal {
