--- a/frontend/src/components/common/Navbar.css
+++ b/frontend/src/components/common/Navbar.css
@@ -1,3 +1,9 @@
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav {
   display: flex;
   flex-shrink: 0;
@@ -33,7 +39,7 @@
 }
 
 .nav li {
-  margin: 0 0.5rem;
+  margin-left: 1rem;
   font-size: 14px;
 }
 
