--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -1,23 +1,22 @@
 .register-page {
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
   background-image: url(../../assets/bg.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
 }
 
 .register-modal {
+  width: 26rem;
   padding: 32px;
   margin: 20px 0;
   border-radius: 15px;
   border: 1px;
   border-color: black;
   max-width: 90vw;
-  width: 26rem;
   background-color: white;
 }
 
