feat: re-design component layout for home page

--- a/frontend/src/pages/InfoHome/InfoHome.css
+++ b/frontend/src/pages/InfoHome/InfoHome.css
@@ -1,66 +1,3 @@
-div.container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-div.info-panel {
-  flex: 1;
-  max-width: 25%;
-  height: 100%;
-  padding: 20px;
-  text-align: center;
-}
-
-div.info-panel h1 {
-  font-size: 40px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-div.info-panel p {
-  font-size: 20px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-div.overall {
-  display: flex;
-  flex-direction: column;
-  margin-top: 50px;
-}
-
-div.overall h2 {
-  font-size: 25px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.card-panel {
-  flex: 3;
-  min-width: 75%;
-  background-color: #f0f4f8;
-}
-
-.module-title {
-  font-size: 25px;
-}
-
-.module-card {
-  background-color: white;
+.component {
   margin: 5px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.card-title {
-  margin-bottom: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: normal;
-}
-
-.ant-progress-text {
-  color: white;
 }
