--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -1,8 +1,9 @@
 .register-page {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-image: url(../../assets/bg.png);
   background-position: center;
   background-size: cover;
